--- a/cssexo3.html
+++ b/cssexo3.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
-<html lang="en"><head>
-    <style>
-p.solid {border-style: solid;background-color:blanchedalmond;}
-</style>
-<p class="solid">Introduction à Monster Hunter.</p>
-</head>
+    <html lang="en">
+    <head>
+        <style>
+           p.solid {border-style: solid;background-color:blanchedalmond;}
+        </style>
+        <p class="solid">Introduction à Monster Hunter.</p>
+    </head>
     <body>
         <div id="menu"></div>
-        <ul id="menu"> <style> 
+        <ul id="menu"> 
+            <style> 
     
-        #menu {
-            display:block;                
-           min-width: 120px;
-            display: flex;             
-            padding:100;                  
-            background-color: #ccc;     
-        }
-        #menu li {
-            padding:10px;
-    list-style-type: none ; } 
-    body {
-  background-color: lightblue;
-} 
+                #menu {
+                    display:block;                
+                    min-width: 120px;
+                    display: flex;             
+                    padding:100;                  
+                    background-color: #ccc;     
+                }
+                #menu li {
+                    padding:10px;
+                    list-style-type: none ; 
+                } 
+                body {
+                    background-color: lightblue;
+                } 
     
-</style>
+            </style>
    
-    <li>
-        <a href="Manga.html">Manga</a>
-    </li>
-    <li>
-        <a href="Film.html">Film</a>
-    </li>
-    <li>
-        <a href="Jeux.html">Jeux</a>
-    </li>
-</ul>
-<style>
-    p.solid2 {border-style: solid;background-color:rgb(208, 255, 205);}
+            <li>
+                <a href="Manga.html">Manga</a>
+            </li>
+            <li>
+                <a href="Film.html">Film</a>
+            </li>
+            <li>
+                <a href="Jeux.html">Jeux</a>
+            </li>
+        </ul>
+        <style>
+            p.solid2 {border-style: solid;background-color:rgb(208, 255, 205);}
     </style>
     <p class="solid2">Paragraphe laurem ipsum.</p>
 </style>
@@ -44,4 +47,16 @@ p.solid {border-style: solid;background-color:blanchedalmond;}
 <img width="400" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/games_15/nintendo_3ds_25/SI_3DS_Monster_Hunter4Ultimate_image1600w.jpg"> </div></body>
 <style>img {
     box-shadow:8px 8px 10px 0 rgba(0,0,0,0.5);
-}</style></html>
+}</style>
+<ul>
+    <li>
+       <a href="Manga.html">Manga</a>
+    </li>
+    <li>
+       <a href="Film.html">Film</a>
+    </li>
+    <li>
+       <a href="Jeux.html">Jeux</a>
+    </li>
+</ul>
+</html>
