messing with it

--- a/cssexo3.html
+++ b/cssexo3.html
@@ -44,7 +44,7 @@
     <p class="solid2">Paragraphe laurem ipsum.</p>
 </style>
 <div style="text-align: center;">
-<img width="400" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/games_15/nintendo_3ds_25/SI_3DS_Monster_Hunter4Ultimate_image1600w.jpg"> </div></body>
+<img width="400" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/games_15/nintendo_3ds_25/SI_3DS_Monster_Hunter4Ultimate_image1600w.jpg"> </div>
 <style>img {
     box-shadow:8px 8px 10px 0 rgba(0,0,0,0.5);
 }</style>
@@ -59,4 +59,5 @@
        <a href="Jeux.html">Jeux</a>
     </li>
 </ul>
+</body>
 </html>
