--- a/exercice4,5.html
+++ b/exercice4,5.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <style>
-      p.solid {border-style: solid;background-color:blanchedalmond;}
+      p.solid {width:300px;clear:right;text-align:left;border-style: solid;background-color:blanchedalmond;}
       </style>
  <p><title>Exercice CSS</title></p>
  <link rel="stylesheet" type="text/css" href="style.css">
@@ -10,20 +10,36 @@
 <body>
    <h1>Ma Page Web</h1>
    <div class="navigation">
-       <ul>
-           <li><a href="">lien 1</a></li>
-           <li><a href="">lien 2</a></li>
-           <li><a href="">lien 3</a></li>
-</ul> </div>
+       <ul class="navigation">
+           <li><a href="#">lien 1</a></li>
+           <ul class="dropdown">
+             <li><a href="#">lien 2</a></li>
+             <li><a href="#">lien 3</a></li></ul>
+            </ul>
+          </ul>   
+<style>
+   
+
+</style>
+</div>
    <div class="main-content">
        <h2>Mon Contenu</h2>
        <span style="font-family: cursive;"><p class="solid">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
    </span>
    </div>
-   <img width="400" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/games_15/nintendo_3ds_25/SI_3DS_Monster_Hunter4Ultimate_image1600w.jpg"> </div></body>
-<style>img {
+   <style> 
+ .main-content h2 {clear: both;}
+   </style>
+   <img class="solid2" width="400" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/games_15/nintendo_3ds_25/SI_3DS_Monster_Hunter4Ultimate_image1600w.jpg">
+<style>
+   img.solid2 {
+      margin:5%;
+      }
+img {
     box-shadow:8px 8px 10px 0 rgba(0,0,0,0.5);
-}</style>
+}
+
+</style>
 </body>
 </html>
