--- a/exercice4,5.html
+++ b/exercice4,5.html
@@ -1,45 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <style>
-      p.solid {width:300px;clear:right;text-align:left;border-style: solid;background-color:blanchedalmond;}
-      </style>
  <p><title>Exercice CSS</title></p>
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-   <h1>Ma Page Web</h1>
-   <div class="navigation">
-       <ul class="navigation">
-           <li><a href="#">lien 1</a></li>
-           <ul class="dropdown">
-             <li><a href="#">lien 2</a></li>
-             <li><a href="#">lien 3</a></li></ul>
-            </ul>
-          </ul>   
-<style>
-   
-
-</style>
-</div>
+   <ul>
+   <li><a href="#">Ma Page Web</a>
+   </li>        
+   <li>
+      <a href="#">lien 1</a>
+      <ul class="dropdown">
+       <li><a href="#">lien 2</a></li>
+       <li><a href="#">lien 3</a></li>
+       <li><a href="#">lien 4</a></li>
+       <li><a href="#">lien 5</a></li>
+      </ul>
+   </li>
+       <li><a href="#">About Us</a></li>
+       <li><a href="#">Contact Us</a></li>
+      </ul>   
    <div class="main-content">
        <h2>Mon Contenu</h2>
        <span style="font-family: cursive;"><p class="solid">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
    </span>
    </div>
-   <style> 
- .main-content h2 {clear: both;}
-   </style>
    <img class="solid2" width="400" src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/games_15/nintendo_3ds_25/SI_3DS_Monster_Hunter4Ultimate_image1600w.jpg">
-<style>
-   img.solid2 {
-      margin:5%;
-      }
-img {
-    box-shadow:8px 8px 10px 0 rgba(0,0,0,0.5);
-}
-
-</style>
 </body>
 </html>
