--- a/about-me.html
+++ b/about-me.html
@@ -6,7 +6,7 @@ s<!DOCTYPE html>
   </head>
     <body>
 
-        <a href="../exo5.html">Go to Home page</a>
+        <a href="exo5.html">Go to Home page</a>
 <table>
   <thead>
     <tr>
@@ -17,19 +17,19 @@ s<!DOCTYPE html>
   </thead>
   <tbody>
     <tr>
-   <td><a href="../exo5.html">project 1</a></td>
+   <td><a href="exo5.html">project 1</a></td>
    <td>Monster Hunter site</td>
    <td>Introduction to what is monster hunter and what are the main games of the franchise</td>
     </tr>
     <tr>
-    <td><a href="">project 2</a></td>
-    <td>table tennis leaderboard</td>
-    <td>A leaderboard for a table tennis tournament</td>
+    <td><a href="livre.html">project 2</a></td>
+    <td>tableau de livre interessant</td>
+    <td>bibliothèque de livre</td>
     </tr>
     <tr>
-      <td><a href="">project 3</a></td>
-      <td>TBD</td>
-      <td>TBD</td>
+      <td><a href="universite.html">project 3</a></td>
+      <td>presantation ipssi</td>
+      <td>premier jet au code au travers d'un site presentant l'ipssi</td>
       </tr>
   </tbody>
 </table>
