--- a/exo5.html
+++ b/exo5.html
@@ -27,25 +27,57 @@
     </thead>
     <tbody>
     </tr>
-    <tr><td> <b>Monster Hunter</b>  </td>   <td>11 march 2004</td></tr>
-    <tr> <td> <b>Monster Hunter G</b>   </td>  <td>20 january 2005</td></tr>
-    <tr> <td> <b>Monster Hunter Freedom</b>  </td>   <td>1 december 2005</td></tr>
-    <tr> <td> <b>Monster Hunter 2</b>  </td>   <td>16 february 2006</td></tr>
-    <tr> <td> <b>Monster Hunter Freedom 2</b>  </td>  <td>22 february 2007</td></tr>
-    <tr>  <td> <b>Monster Hunter Freedom Unite</b>  </td>  <td>27 march 2008</td></tr>
-    <tr> <td> <b>Monster Hunter Tri</b>  </td>   <td>1 august 2009</td></tr>
-    <tr> <td> <b>Monster Hunter Portable 3rd</b>  </td>   <td>1 december 2010</td></tr>
-    <tr> <td> <b>Monster Hunter 3 Ultimate</b>  </td>   <td>10 december 2011</td></tr>
-    <tr>  <td> <b>Monster Hunter 4</b>  </td>   <td>4 september 2013</td></tr>
-    <tr> <td> <b>Monster Hunter 4 Ultimate</b>  </td>   <td>11 october 2014</td></tr>
-    <tr> <td> <b>Monster Hunter Generation</b>  </td>   <td>28 november 2015</td></tr>
-    <tr> <td> <b>Monster Hunter Generation Ultimate</b>  </td>   <td>18 march 2017</td></tr>
-    <tr> <td> <b>Monster Hunter World</b>  </td>   <td>26 january 2018</td></tr>
-    <tr> <td> <b>Monster Hunter Rise</b>    <img src="" alt="Monster Hunter rise logo"></td>   <td>26 march 2021</td></tr>
-</tbody></div>
-</table><br>
+    <tr>
+      <td> <b>Monster Hunter</b>  <img src="" alt="Monster Hunter rise logo"> </td>   <td>11 march 2004</td>
+    </tr>
+    <tr> 
+      <td> <b>Monster Hunter G</b>   <img src="" alt="Monster Hunter rise logo"> </td>  <td>20 january 2005</td>
+    </tr>
+    <tr>
+      <td> <b>Monster Hunter Freedom</b>  <img src="" alt="Monster Hunter rise logo"> </td>   <td>1 december 2005</td>
+    </tr>
+    <tr>
+       <td> <b>Monster Hunter 2</b>  <img src="" alt="Monster Hunter rise logo"> </td>   <td>16 february 2006</td>
+    </tr>
+    <tr> 
+      <td> <b>Monster Hunter Freedom 2</b>   <img src="" alt="Monster Hunter rise logo"></td>  <td>22 february 2007</td>
+    </tr>
+    <tr> 
+       <td> <b>Monster Hunter Freedom Unite</b>   <img src="" alt="Monster Hunter rise logo"></td>  <td>27 march 2008</td>
+    </tr>
+    <tr> 
+      <td> <b>Monster Hunter Tri</b>   <img src="" alt="Monster Hunter rise logo"></td>   <td>1 august 2009</td>
+    </tr>
+    <tr>
+       <td> <b>Monster Hunter Portable 3rd</b>   <img src="" alt="Monster Hunter rise logo"></td>   <td>1 december 2010</td>
+    </tr>
+    <tr> 
+      <td> <b>Monster Hunter 3 Ultimate</b>   <img src="" alt="Monster Hunter rise logo"></td>   <td>10 december 2011</td>
+    </tr>
+    <tr>  
+      <td> <b>Monster Hunter 4</b>   <img src="" alt="Monster Hunter rise logo"></td>   <td>4 september 2013</td>
+    </tr>
+    <tr> 
+      <td> <b>Monster Hunter 4 Ultimate</b>   <img src="" alt="Monster Hunter rise logo"></td>   <td>11 october 2014</td>
+    </tr>
+    <tr> 
+      <td> <b>Monster Hunter Generation</b>  <img src="" alt="Monster Hunter rise logo"> </td>   <td>28 november 2015</td>
+    </tr>
+    <tr> 
+      <td> <b>Monster Hunter Generation Ultimate</b>   <img src="" alt="Monster Hunter rise logo"></td>   <td>18 march 2017</td>
+    </tr>
+    <tr>
+       <td> <b>Monster Hunter World</b>   <img src="" alt="Monster Hunter rise logo"></td>   <td>26 january 2018</td>
+    </tr>
+    <tr>
+       <td> <b>Monster Hunter Rise</b>    <img src="" alt="Monster Hunter rise logo"></td>   <td>26 march 2021</td>
+    </tr>
+</tbody>
+</div>
+</table>
+<br>
   <h2 id="consols">Consols </h1>
-  <ul>
+  <ol>
     <li>Playstation 2</li>
     <li>Playstation Portable</li>
     <li>Wii</li>
@@ -58,9 +90,9 @@
     <li>Xbox One</li>
     <p>and even</p>
     <li>PC</li>
-  </ul>
+  </ol>
 
-  <a href="Pages/about-me.html">Go to about me</a>
+  <a href="about-me.html">Go to about me</a>
   <style> .blue{
     background-color: blue;
   } 
