--- a/about-me.html
+++ b/about-me.html
@@ -17,20 +17,20 @@ s<!DOCTYPE html>
   </thead>
   <tbody>
     <tr>
-   <td><a href="exo5.html">project 1</a></td>
-   <td>Monster Hunter site</td>
-   <td>Introduction to what is monster hunter and what are the main games of the franchise</td>
+        <td><a href="exo5.html">project 1</a></td>
+        <td>Monster Hunter site</td>
+        <td>Introduction to what is monster hunter and what are the main games of the franchise</td>
     </tr>
     <tr>
-    <td><a href="livre.html">project 2</a></td>
-    <td>tableau de livre interessant</td>
-    <td>bibliothèque de livre</td>
+        <td><a href="livre.html">project 2</a></td>
+        <td>tableau de livre </td>
+        <td>bibliothèque de livre</td>
     </tr>
     <tr>
-      <td><a href="universite.html">project 3</a></td>
-      <td>presantation ipssi</td>
-      <td>premier jet au code au travers d'un site presentant l'ipssi</td>
-      </tr>
+        <td><a href="universite.html">project 3</a></td>
+        <td>presentation ipssi</td>
+        <td>premier jet au code au travers d'un site presentant l'ipssi</td>
+    </tr>
   </tbody>
 </table>
     </body>
