--- a/exo5.html
+++ b/exo5.html
@@ -7,19 +7,28 @@
   </head>
   <body>
    <ol>
-    <li><a href="#introductionToMonsterHunter">Introduction</a></li><br>
-    <li><a href="#allMainMonsterHunterGames">All Main Monster Hunter Games</a></li><br>
-    <li> <a href="#consols">Consols</a></li><br> 
+    <li>
+      <a href="#introductionToMonsterHunter">Introduction</a>
+    </li><br>
+    <li>
+      <a href="#allMainMonsterHunterGames">All Main Monster Hunter Games</a>
+    </li><br>
+    <li>
+      <a href="#consols">Consols</a>
+    </li><br> 
+    <li>
+      <a href="#More">More </a>
+    </li><br> 
     <hr>
 </ol>
-   <h1 id="introductionToMonsterHunter">Introduction to Monster Hunter</h1>
+   <h1 id="introductionToMonsterHunter">Introduction to Monster Hunter</h1><br>
 
 <p>Monster Hunter is a game produced by <b>Capcom</b> , first launched on the Playstation 2 
  this <b>hack and slash</b> type of game was extremly popular. But what is Monster Hunter? In this game the player is
  a Hunter in a <b> <i>fantasy</i>  </b> world and as such he needs to complete quests such as collecting items , capturing monster or even hunting big or small monster.
 </p>
-
-<h2 id="allMainMonsterHunterGames">All Main Monster Hunter Games</h1>
+<br>
+<h2 id="allMainMonsterHunterGames">All Main Monster Hunter Games</h2>
 <div class="container"> <table class="gameTable"><br>
     <tr>
         <thead>
@@ -76,7 +85,7 @@
 </div>
 </table>
 <br>
-  <h2 id="consols">Consols </h1>
+  <h2 id="consols">Consols </h2><br>
   <ol>
     <li>Playstation 2</li>
     <li>Playstation Portable</li>
@@ -92,7 +101,16 @@
     <li>PC</li>
   </ol>
 
-  <a href="about-me.html">Go to about me</a>
+  <h2 id="More">More </h2><br>
+
+  <ol>
+      <li><a href="about-me.html">Go to about me</a></li>
+  
+      <li><a href="livre.html">project 2</a></li>
+  
+      <li><a href="universite.html">project 3</a></li>
+  </ol>
+
   <style> .blue{
     background-color: blue;
   } 
