--- a/universite.html
+++ b/universite.html
@@ -31,5 +31,12 @@
      <a href="https://diplomeo.com/etablissement-ipssi-7841">click here</a>
    <p>Validation</p>
    <a href="https://ecole-ipssi.com/ecole-informatique/diplomes-certifications-reconnus/">click here</a>
+   <ol>
+    <li><a href="about-me.html">Go to about me</a></li>
+
+    <li><a href="livre.html">project 2</a></li>
+
+    <li><a href="exo5.html">project 1</a></li>
+</ol>
 </body>
 </html>
