--- a/livre.html
+++ b/livre.html
@@ -39,12 +39,14 @@
             <td><iframe width="560" height="315" src="https://www.youtube.com/embed/NtssbUbxDDM?si=VBR7e9IHBCgmzyyv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></td>
         </tr>
     </table>
-    <ol>
+<footer>
+        <ol>
         <li><a href="about-me.html">Go to about me</a></li>
     
         <li><a href="exo5.html">project 1</a></li>
     
         <li><a href="universite.html">project 3</a></li>
     </ol>
+</footer>
 </body>
 </html>
