--- a/universite.html
+++ b/universite.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head><title>Ipssi</title> </head>
+    <head>
+        <link rel="stylesheet" type="text/css" href="styleSheetExo5.css">
+        <title>Ipssi</title> </head>
     <body> <h1> Ipssi</h1>
-    <h2> les differents campus</h2>
+        <div class="navigation">
+        <div class="dropdown">
+            <button class="dropbtn"> les differents campus</button>
+            <div class="dropdown-content">
      <li>saint quentin en yveline </li>
          <a href="https://ecole-ipssi.com/ecole-informatique-saint-quentin-en-yvelines/">Campus Saint quentin en yveline</a>
      <li>Paris </li>
@@ -15,7 +20,9 @@
          <a href="https://ecole-ipssi.com/ecole-informatique-nice/">Campus Nice</a>
      <li>Lyon</li>
          <a href="https://ecole-ipssi.com/ecole-informatique-lyon/">Campus Lyon</a>
-
+        </div>
+    </div>
+ </div>
     <h2>Les differentes formation et programmes</h2>
     <li>PREPA BACHELOR INFORMATIQUE</li>
     <li>BTS SIO</li>
@@ -31,12 +38,14 @@
      <a href="https://diplomeo.com/etablissement-ipssi-7841">click here</a>
    <p>Validation</p>
    <a href="https://ecole-ipssi.com/ecole-informatique/diplomes-certifications-reconnus/">click here</a>
-   <ol>
-    <li><a href="about-me.html">Go to about me</a></li>
+<footer>
+    <ol>
+     <li><a href="about-me.html">Go to about me</a></li>
 
     <li><a href="livre.html">project 2</a></li>
 
     <li><a href="exo5.html">project 1</a></li>
-</ol>
+    </ol>
+</footer>
 </body>
 </html>
