--- a/FirstExoBTS/exercice4.html
+++ b/FirstExoBTS/exercice4.html
@@ -7,8 +7,8 @@
 <body>
    <h1>Ma Page Web</h1>
       <div class="navigation">
-         <a href="#home">Home</a>
-         <a href="#about">About</a>
+         <a href="exo5.html">Home</a>&nbsp &nbsp &nbsp
+         <a href="about-me.html">About me</a>
          <div class="dropdown">
             <button class="dropbtn">Dropdown</button>
             <div class="dropdown-content">
