--- a/portfoliobtssio/portoflioCv.html
+++ b/portfoliobtssio/portoflioCv.html
@@ -25,7 +25,7 @@
             <li class="nav-item">
                 <button class="nav-link active" aria-current="page"  onclick="location.href='#Competence'">Competence</button>
             </li>
-            <li>
+            <li class="nav-item">
                 <button class="nav-link active" aria-current="page"  onclick="location.href='#Contact'">Contact</button>
             </li>
           </ul>
@@ -40,10 +40,8 @@
                 à l'école IPSSI Paris.<br>
                 Je serai très prochainement en études de développement web et applications ou IA à Paris.
             </p>
-        <div class="btn-con">
-            <a href="content\CV_CA.pdf" class="main-btn" download="CV_CA.pdf">  
-                <span class="btn-text" >Télécharger mon CV</span>
-                <span class="btn-icon"><i class="fas fa-download"></i></span>
+            <a href="/btssio/btssio/img/CV.pdf" class="button" download="CV-CLAIRON-Anthony.pdf">  
+                <span>Télécharger mon CV</span>
             </a>
         </div>
         <h2 id="ParcoursScolaire">Parcours Scolaire</h2>
@@ -92,6 +90,7 @@
     </main>
     <footer>
         <h2 id="Contact">Contact</h2>
+        <a href="contact.html" class="button"><span>Nous contacter</span></a>
     </footer>
     
 </body>
