--- a/FirstExoBTS/css.html
+++ b/FirstExoBTS/css.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>  <div id="circle"></div><div id="square"></div><style>
     body {
       display: flex;
