--- a/FirstExoBTS/index.html
+++ b/FirstExoBTS/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
    <head ><link rel="stylesheet" href="mystyle.css"><title>Introduction Html</title></head>
    <body style="background-color:DodgerBlue;"> <h1 style="color:red;">header</h1> 
     
