--- a/portfoliobtssio/portoflioCv.html
+++ b/portfoliobtssio/portoflioCv.html
@@ -40,7 +40,7 @@
                 à l'école IPSSI Paris.<br>
                 Je serai très prochainement en études de développement web et applications ou IA à Paris.
             </p>
-            <a href="/btssio/btssio/img/CV.pdf" class="button" download="CV-CLAIRON-Anthony.pdf">  
+            <a href="../img/CV.pdf" class="button" download="CV-CLAIRON-Anthony.pdf">  
                 <span>Télécharger mon CV</span>
             </a>
         </div>
