--- a/portfoliobtssio/portoflioCv.html
+++ b/portfoliobtssio/portoflioCv.html
@@ -7,9 +7,8 @@
     <meta name="author" content="CAIRON Anthony">
     <link rel="stylesheet" type="text/css" href="portfolio.css">
     <title>Portfolio de CLAIRON Anthony (BTS SIO 2025)</title>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <body>
     <header>
         <ul class="nav nav-tabs">
@@ -17,16 +16,16 @@
                 <button class="nav-link active" aria-current="page"  onclick="location.href='#Presentation'">Présentation</button>
             </li>
             <li class="nav-item">
-                <button class="nav-link active" aria-current="page"  onclick="location.href='#ParcoursScolaire'">Parcours Scolaire</button>
+                <button class="nav-link " aria-current="page"  onclick="location.href='#ParcoursScolaire'">Parcours Scolaire</button>
             </li>
             <li class="nav-item">
-                <button class="nav-link active" aria-current="page"  onclick="location.href='#ParcoursProfessionnel'">Parcours Professionnel</button>
+                <button class="nav-link " aria-current="page"  onclick="location.href='#ParcoursProfessionnel'">Parcours Professionnel</button>
             </li>
             <li class="nav-item">
-                <button class="nav-link active" aria-current="page"  onclick="location.href='#Competence'">Competence</button>
+                <button class="nav-link " aria-current="page"  onclick="location.href='#Competence'">Competence</button>
             </li>
             <li class="nav-item">
-                <button class="nav-link active" aria-current="page"  onclick="location.href='#Contact'">Contact</button>
+                <button class="nav-link " aria-current="page"  onclick="location.href='#Contact'">Contact</button>
             </li>
           </ul>
     </header>
