--- a/portfoliobtssio/contact.html
+++ b/portfoliobtssio/contact.html
@@ -2,61 +2,45 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Contact CLAIRON Anthony">
-    <meta name="author" content="CAIRON Anthony">
-    <link rel="stylesheet" type="text/css" href="contact.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="/contact.css">
+    <title>Portfolio de CLAIRON Anthony (BTS SIO 2025)</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <title>Contact</title>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    <header id="mainHeader">
-        <h1>Contact</h1>
-        <nav id="mainNav">
-            <ul>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-            </ul>
-        </nav>
-        <button id="menuToggle"><img src="hamburgerMenu"alt="toReduceMenu"/></button>
-    </header><!--fin du #mainHeader-->
-    <main id="pageContent">
-        <h1>Contactez-nous</h1>
-        <p>Merci de compléter le formulaire suivant pour nous contacter. Tous les champs de ce formulaore sont requis.</p>
-        <form id="frmContact" action="merci.html">
-            <div>
-                <div>
-                    <label for="fName">Prénom</label>
-                    <input type="text" name="fName" id="fName"/>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <label for="lName">Nom de famille</label>
-                    <input type="text" name="lName" id="lName"/>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <label for="email">Votre e-mail</label>
-                    <input type="email" name="emaile" id="email"/>
-                </div>
-            </div>
-            <div>
-                <div>
-                    <label for="message">Votre message</label>
-                    <textarea name="message" id="message"></textarea>
-                </div>
-            </div>
+    <header>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <button class="nav-link active" ><a href="portoflioCv.html#Presentation"> Présentation</button></a>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link "><a href="portoflioCv.html#ParcoursScolaire">Parcours Scolaire</button></a>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link "><a href="portoflioCv.html#ParcoursScolaire">Parcours Professionnel</button></a>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link "><a href="portoflioCv.html#Competence">Competence</button></a>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link "><a href="portoflioCv.html#Competence">Contact</button></a>
+            </li>
+          </ul>
+    </header>
+    <div class="container">
+        <h2>Contactez-nous</h2>
+        <div class="contact-info">
+            <p><strong>Téléphone:</strong> +33 1 01 01 01 01</p>
+            <p><strong>Email:</strong> claironanthony@gmail.com</p>
+        </div>
+        <form action="mailto:your_email@example.com" method="post" enctype="text/plain">
+            <input type="text" name="name" placeholder="Votre nom" required>
+            <input type="email" name="email" placeholder="Votre Email" required>
+            <textarea name="message" placeholder="Votre Message" required></textarea>
+            <input type="submit" value="Envoyer le Message">
         </form>
-    </main><!--fin du #pageContent-->
-    <footer id="mainFooter">
-        <p>Copyright Anthony CLAIRON- 2023</p>
-    </footer><!--fin du #mainFooter-->
+    </div>
 </body>
 </html>
