--- a/portfoliobtssio/portoflioCv.html
+++ b/portfoliobtssio/portoflioCv.html
@@ -5,11 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Portfolio de CLAIRON Anthony - BTS SIO SLAM">
     <meta name="author" content="CAIRON Anthony">
-    <link rel="stylesheet" type="text/css" href="portfolio.css">
+   <!--<link rel="stylesheet" type="text/css" href="portfolio.css">-->
     <title>Portfolio de CLAIRON Anthony (BTS SIO 2025)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <body>
+    <style>
+body{
+    font-style: normal;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color:black;
+    color: antiquewhite;
+    padding: 25px;
+}
+ol  li {
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+    .button {
+    display: inline-block;
+    text-decoration: none;
+    color: #120817;
+    background-color: #612a79;
+    border-radius: 0.25rem;
+}
+.button:hover span {
+    background-color: #c9a3d9;
+}
+.button:active span {
+    translate: none;
+}
+.button span {
+    display: inherit;
+    border-radius: inherit;
+    background-color: #d6b4e4;
+    padding: 1rem 2rem;
+    translate: 0.25rem -0.25rem;
+    border: 2px solid #612a79;
+    transition: translate 100ms 
+    cubic-bezier(0.175, 0.885, 0.32, 1.275),
+    background-color 250ms;
+}
+.whitedbutton {
+    display: inline-block;
+    text-decoration: none;
+    color: #120817;
+    background-color: #612a79;
+    border-radius: 0.25rem;
+}
+.whitedbutton:hover span {
+    background-color: #c9a3d9;
+}
+.whitedbutton:active span {
+    translate: none;
+}
+.whitedbutton span {
+    display: inherit;
+    border-radius: inherit;
+    background-color: #d6b4e4;
+    padding: 1rem 2rem;
+    translate: 0.25rem -0.25rem;
+    border: 2px solid #612a79;
+    transition: translate 100ms 
+    cubic-bezier(0.175, 0.885, 0.32, 1.275),
+    background-color 250ms;
+}
+
+.blackedbutton {
+    display: inline-block;
+    text-decoration: none;
+    color: #120817;
+    background-color: #612a79;
+    border-radius: 0.25rem;
+}
+.blackedbutton:hover span {
+    background-color: #c9a3d9;
+}
+.blackedbutton:active span {
+    translate: none;
+}
+.blackedbutton span {
+    display: inherit;
+    border-radius: inherit;
+    background-color: #d6b4e4;
+    padding: 1rem 2rem;
+    translate: 0.25rem -0.25rem;
+    border: 2px solid #612a79;
+    transition: translate 100ms 
+    cubic-bezier(0.175, 0.885, 0.32, 1.275),
+    background-color 250ms;
+}
+
+    </style>
     <header>
         <ul class="nav nav-tabs">
             <li class="nav-item">
@@ -30,6 +116,7 @@
           </ul>
     </header>
     <main>
+        <a href="" class="whitedbutton"><span>Light mode</span></a><a href="" class="blackedbutton"><span>Dark mode</span></a>
     <div class="container">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus nunc, malesuada vitae sapien ac, rhoncus tempor odio. Suspendisse potenti. Nam a sagittis magna, nec luctus nibh. Mauris elementum, ante sit amet suscipit fringilla, nulla urna dignissim ex, ut porta lacus nisl sed lacus. In augue tellus, vulputate a elit vel, hendrerit malesuada diam. Integer scelerisque nisi blandit viverra tincidunt. Nullam rhoncus elementum nisi. Pellentesque sit amet placerat eros. Fusce tristique viverra aliquet. Cras at congue urna. Integer id gravida odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed sapien justo, volutpat quis nisi in, commodo porta metus. Cras ultricies cursus est, quis molestie enim pretium sit amet. Morbi blandit efficitur justo, maximus posuere arcu pharetra at. Quisque vitae nisl vel turpis egestas cursus gravida ut augue.
              Suspendisse dictum diam sapien, a dignissim mauris commodo sit amet. Pellentesque tincidunt, turpis id cursus tristique, risus magna aliquet ligula, in blandit libero risus nec risus. Morbi tempus pulvinar lectus vel auctor. Aenean at ante tortor. Nulla pellentesque leo at enim mattis faucibus. In pulvinar dui vel felis rutrum ultricies. Sed urna lectus, porttitor ut aliquam sit amet, pharetra a augue. Vestibulum efficitur eleifend mauris, ac cursus orci fringilla dignissim. Nunc egestas, sem sit amet vestibulum vulputate, velit tellus gravida urna, eu dapibus nunc leo quis diam. Morbi eu dui eget elit sollicitudin condimentum. Nullam mollis, sem vitae gravida iaculis, est diam iaculis orci, vel commodo dui orci quis tortor. Curabitur tristique metus urna, at rhoncus ante pretium et. Cras consectetur scelerisque pretium. Pellentesque suscipit felis ipsum, vitae dapibus sapien fermentum non. Suspendisse eu risus vitae quam semper elementum a vel lacus. Etiam porta vitae sapien nec auctor.</p>
@@ -43,47 +130,40 @@
                 <span>Télécharger mon CV</span>
             </a>
         </div>
+        <h2>BTS SIO c'est quoi?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus nunc, malesuada vitae sapien ac, rhoncus tempor odio. Suspendisse potenti. Nam a sagittis magna, nec luctus nibh. Mauris elementum, ante sit amet suscipit fringilla, nulla urna dignissim ex, ut porta lacus nisl sed lacus. In augue tellus, vulputate a elit vel, hendrerit malesuada diam. Integer scelerisque nisi blandit viverra tincidunt. Nullam rhoncus elementum nisi. Pellentesque sit amet placerat eros. Fusce tristique viverra aliquet. Cras at congue urna. Integer id gravida odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed sapien justo, volutpat quis nisi in, commodo porta metus. Cras ultricies cursus est, quis molestie enim pretium sit amet. Morbi blandit efficitur justo, maximus posuere arcu pharetra at. Quisque vitae nisl vel turpis egestas cursus gravida ut augue.
+                Suspendisse dictum diam sapien, a dignissim mauris commodo sit amet. Pellentesque tincidunt, turpis id cursus tristique, risus magna aliquet ligula, in blandit libero risus nec risus. Morbi tempus pulvinar lectus vel auctor. Aenean at ante tortor. Nulla pellentesque leo at enim mattis faucibus. In pulvinar dui vel felis rutrum ultricies. Sed urna lectus, porttitor ut aliquam sit amet, pharetra a augue. Vestibulum efficitur eleifend mauris, ac cursus orci fringilla dignissim. Nunc egestas, sem sit amet vestibulum vulputate, velit tellus gravida urna, eu dapibus nunc leo quis diam. Morbi eu dui eget elit sollicitudin condimentum. Nullam mollis, sem vitae gravida iaculis, est diam iaculis orci, vel commodo dui orci quis tortor. Curabitur tristique metus urna, at rhoncus ante pretium et. Cras consectetur scelerisque pretium. Pellentesque suscipit felis ipsum, vitae dapibus sapien fermentum non. Suspendisse eu risus vitae quam semper elementum a vel lacus. Etiam porta vitae sapien nec auctor.</p>   
         <h2 id="ParcoursScolaire">Parcours Scolaire</h2>
             <ul>
-                <li>BAC S svt non obtenu</li>
                 <li>BAC LLCER Anglais obtenu en 2023</li>
                     <img src="">
-                <li>BTS SIO SLAM obtenue en 2025</li>
+                <li>BTS SIO SLAM en cours d'obtention depuis 2023</li>
                     <img src="">
-                <li>LICENSE OU BACHELOR obtenu en 2026</li>
-                    <img src="">
-                <li>Master ou Mastère obtenu en 2028</li>
-                    <img src="">
+               
             </ul>
         <h2 id="ParcoursProfessionnel">Parcours Professionnel</h2>
             <ol>
-                <li>Professeur d'anglais pendant 5 ans</li>
+                <li>Professeur d'anglais pendant 5 ans particulier</li>
                     <p>professeur d'anglais pour les jeunes entre 5 et 12 ans régulierement et plus rarement les plus agés même si cela est deja arriver mais de maniere plus spontané</p>
-                <li>animateur en centre durée de 15 jours</li>
-                    <p>animateur en centre dans le cadre du stage bafa avec pour objectif la validation de celui </p>
                 <li>Animateur en espace jeunes durée de 4 mois cumulé</li>
                     <p>Animateur durant les vanaces au depart cumulant 1 mois eparpillé puis 3 mois a temps plein en tant qu'animateur dans le centre Louis Aragon de villier le bel </p>
                 <li>Stage bts sio slam durée de 5 semaine </li>
                     <p>stage formateur dans l'ensemble et utile a l'obtension de mon diplome permis d'avoir un avant gout du monde du travail en dev.</p>
-                <li>alternance bts sio slam durée de 1 an </li>
+               <!-- <li>alternance bts sio slam durée de 1 an </li>
                     <p>Période d'alternance nécessaire a l'obtention du bts enrichissant et ayant permis de renforcer mes connaissance ainsi que de réelement plonger dans le monde du travail pendant la majorité de l'année</p>
-                <li>alternance de Bachelor ou license de 1 an </li>
-                    <p>Le niveau d'attente ayant changer il a permis de voir que l'insertion que le bts donnais n'étais qu'un debut par rapport au taches qui nous sont et seront donnés </p>
-                <li>alternance de Master ou Mastère durée de 2 ans </li>
                     <p>Habitué du rythme de travail et de l'attente des entreprises , une finalité proche par rapport au cursus montre que on l'approche de la fin du cursus etudiant </p>
-            </ol>
+            --></ol>
         <h2 id="Competence">Competence</h2>
             <ul>
-                <li>Competence seul</li>
-                <li>Competence seul</li>
-                <li>Competence seul</li>
-                <li>Competence seul</li>
+                <li>Curieux</li>
+                <li>Débrouillard</li>
+                <li>prompt à se tirer d'embarras</li>
+                <li>Un comportement adaptatif aux changements de l'environnement</li>
             </ul>
             <ul>
-                <li>Competence de groupe</li>
-                <li>Competence de groupe</li>
-                <li>Competence de groupe</li>
-                <li>Competence de groupe</li>
+                <li>Meneur de projet</li>
+                <li>Écoute active</li>
+                <li>Membre de groupe actif et assidu</li>
             </ul>
      </div>
     </main>
