--- a/portfoliobtssio/portoflioCv.html
+++ b/portfoliobtssio/portoflioCv.html
@@ -5,97 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Portfolio de CLAIRON Anthony - BTS SIO SLAM">
     <meta name="author" content="CAIRON Anthony">
-   <!--<link rel="stylesheet" type="text/css" href="portfolio.css">-->
+    <link rel="stylesheet" type="text/css" href="portfolio.css">
     <title>Portfolio de CLAIRON Anthony (BTS SIO 2025)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <body>
-    <style>
-body{
-    font-style: normal;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color:black;
-    color: antiquewhite;
-    padding: 25px;
-}
-ol  li {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-    .button {
-    display: inline-block;
-    text-decoration: none;
-    color: #120817;
-    background-color: #612a79;
-    border-radius: 0.25rem;
-}
-.button:hover span {
-    background-color: #c9a3d9;
-}
-.button:active span {
-    translate: none;
-}
-.button span {
-    display: inherit;
-    border-radius: inherit;
-    background-color: #d6b4e4;
-    padding: 1rem 2rem;
-    translate: 0.25rem -0.25rem;
-    border: 2px solid #612a79;
-    transition: translate 100ms 
-    cubic-bezier(0.175, 0.885, 0.32, 1.275),
-    background-color 250ms;
-}
-.whitedbutton {
-    display: inline-block;
-    text-decoration: none;
-    color: #120817;
-    background-color: #612a79;
-    border-radius: 0.25rem;
-}
-.whitedbutton:hover span {
-    background-color: #c9a3d9;
-}
-.whitedbutton:active span {
-    translate: none;
-}
-.whitedbutton span {
-    display: inherit;
-    border-radius: inherit;
-    background-color: #d6b4e4;
-    padding: 1rem 2rem;
-    translate: 0.25rem -0.25rem;
-    border: 2px solid #612a79;
-    transition: translate 100ms 
-    cubic-bezier(0.175, 0.885, 0.32, 1.275),
-    background-color 250ms;
-}
-
-.blackedbutton {
-    display: inline-block;
-    text-decoration: none;
-    color: #120817;
-    background-color: #612a79;
-    border-radius: 0.25rem;
-}
-.blackedbutton:hover span {
-    background-color: #c9a3d9;
-}
-.blackedbutton:active span {
-    translate: none;
-}
-.blackedbutton span {
-    display: inherit;
-    border-radius: inherit;
-    background-color: #d6b4e4;
-    padding: 1rem 2rem;
-    translate: 0.25rem -0.25rem;
-    border: 2px solid #612a79;
-    transition: translate 100ms 
-    cubic-bezier(0.175, 0.885, 0.32, 1.275),
-    background-color 250ms;
-}
-
-    </style>
     <header>
         <ul class="nav nav-tabs">
             <li class="nav-item">
