--- a/portfoliobtssio/portoflioCv.html
+++ b/portfoliobtssio/portoflioCv.html
@@ -10,6 +10,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <body>
+    <div class="container">
+        <h1>Dark/Light Mode Toggle</h1>
+        <label class="switch">
+          <input type="checkbox" id="modeToggle">
+          <span class="slider round"></span>
+        </label>
+      </div>
+      
     <header>
         <ul class="nav nav-tabs">
             <li class="nav-item">
@@ -85,7 +93,7 @@
         <h2 id="Contact">Contact</h2>
         <a href="contact.html" class="button"><span>Nous contacter</span></a>
     </footer>
-    
+    <script src="script.js"></script>
 </body>
 </head>
 </html>
