--- a/FirstExoBTS/exoJS/exoJS.html
+++ b/FirstExoBTS/exoJS/exoJS.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="monDiv">
+        <p>this shit sucks</p>
+    </div>
+    <a href="" id="mainButton" onclick="displayText()"><span>Button</span></a>
     <script src="index.js"></script>
 </body>
 </html>
