--- a/portfoliobtssio/index.html
+++ b/portfoliobtssio/index.html
@@ -3,21 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Portfolio de CLAIRON Anthony - BTS SIO SLAM">
     <meta name="author" content="CAIRON Anthony">
-    <link rel="stylesheet" type="text/css" href="portfolio.css">
+
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>Portfolio de CLAIRON Anthony (BTS SIO 2025)</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <body>
-    <div class="container">
-        <h1>Dark/Light Mode Toggle</h1>
-        <label class="switch">
-          <input type="checkbox" id="modeToggle">
-          <span class="slider round"></span>
-        </label>
-      </div>
-      
+    <h1>Portfolio de Anthony Clairon</h1>
     <header>
         <ul class="nav nav-tabs">
             <li class="nav-item">
@@ -39,6 +32,7 @@
     </header> 
     <main>
         <a href="" class="whitedbutton"><span>Light mode</span></a><a href="" class="blackedbutton"><span>Dark mode</span></a>
+        <h1> Qu'est ce que le BTS SIO SLAM </h1>
     <div class="container">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec purus nunc, malesuada vitae sapien ac, rhoncus tempor odio. Suspendisse potenti. Nam a sagittis magna, nec luctus nibh. Mauris elementum, ante sit amet suscipit fringilla, nulla urna dignissim ex, ut porta lacus nisl sed lacus. In augue tellus, vulputate a elit vel, hendrerit malesuada diam. Integer scelerisque nisi blandit viverra tincidunt. Nullam rhoncus elementum nisi. Pellentesque sit amet placerat eros. Fusce tristique viverra aliquet. Cras at congue urna. Integer id gravida odio. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed sapien justo, volutpat quis nisi in, commodo porta metus. Cras ultricies cursus est, quis molestie enim pretium sit amet. Morbi blandit efficitur justo, maximus posuere arcu pharetra at. Quisque vitae nisl vel turpis egestas cursus gravida ut augue.
              Suspendisse dictum diam sapien, a dignissim mauris commodo sit amet. Pellentesque tincidunt, turpis id cursus tristique, risus magna aliquet ligula, in blandit libero risus nec risus. Morbi tempus pulvinar lectus vel auctor. Aenean at ante tortor. Nulla pellentesque leo at enim mattis faucibus. In pulvinar dui vel felis rutrum ultricies. Sed urna lectus, porttitor ut aliquam sit amet, pharetra a augue. Vestibulum efficitur eleifend mauris, ac cursus orci fringilla dignissim. Nunc egestas, sem sit amet vestibulum vulputate, velit tellus gravida urna, eu dapibus nunc leo quis diam. Morbi eu dui eget elit sollicitudin condimentum. Nullam mollis, sem vitae gravida iaculis, est diam iaculis orci, vel commodo dui orci quis tortor. Curabitur tristique metus urna, at rhoncus ante pretium et. Cras consectetur scelerisque pretium. Pellentesque suscipit felis ipsum, vitae dapibus sapien fermentum non. Suspendisse eu risus vitae quam semper elementum a vel lacus. Etiam porta vitae sapien nec auctor.</p>
@@ -69,12 +63,11 @@
                     <p>professeur d'anglais pour les jeunes entre 5 et 12 ans régulierement et plus rarement les plus agés même si cela est deja arriver mais de maniere plus spontané</p>
                 <li>Animateur en espace jeunes durée de 4 mois cumulé</li>
                     <p>Animateur durant les vanaces au depart cumulant 1 mois eparpillé puis 3 mois a temps plein en tant qu'animateur dans le centre Louis Aragon de villier le bel </p>
+                <li>Etudiant en BTS SIO SLAM à l'IPSSI</li>    
+                    <p>Etudiant dans le campus Paris de l'IPSSI ayant permis l'apprentissage des bases du codes et de la gestion de base de donnée</p>
                 <li>Stage bts sio slam durée de 5 semaine </li>
                     <p>stage formateur dans l'ensemble et utile a l'obtension de mon diplome permis d'avoir un avant gout du monde du travail en dev.</p>
-               <!-- <li>alternance bts sio slam durée de 1 an </li>
-                    <p>Période d'alternance nécessaire a l'obtention du bts enrichissant et ayant permis de renforcer mes connaissance ainsi que de réelement plonger dans le monde du travail pendant la majorité de l'année</p>
-                    <p>Habitué du rythme de travail et de l'attente des entreprises , une finalité proche par rapport au cursus montre que on l'approche de la fin du cursus etudiant </p>
-            --></ol>
+              </ol>
         <h2 id="Competence">Competence</h2>
             <ul>
                 <li>Curieux</li>
