--- a/portfoliobtssio/contact.html
+++ b/portfoliobtssio/contact.html
@@ -3,32 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/contact.css">
+    <meta https-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="trying.css">
     <title>Portfolio de CLAIRON Anthony (BTS SIO 2025)</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <title>Contact</title>
 </head>
 <body>
-    <header>
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <button class="nav-link active" ><a href="portoflioCv.html#Presentation"> Présentation</button></a>
-            </li>
-            <li class="nav-item">
-                <button class="nav-link "><a href="portoflioCv.html#ParcoursScolaire">Parcours Scolaire</button></a>
-            </li>
-            <li class="nav-item">
-                <button class="nav-link "><a href="portoflioCv.html#ParcoursScolaire">Parcours Professionnel</button></a>
-            </li>
-            <li class="nav-item">
-                <button class="nav-link "><a href="portoflioCv.html#Competence">Competence</button></a>
-            </li>
-            <li class="nav-item">
-                <button class="nav-link "><a href="portoflioCv.html#Competence">Contact</button></a>
-            </li>
-          </ul>
-    </header>
+        <div class="navigation">
+            <div class="menu-toggle"></div>
+            <ul class="list">
+                <li class="list-item"><a href="index.html">
+                        <span class="text">Home</span>
+                    </a></li>
+                <li class="list-item"><a href="parcours.html">
+                        <span class="text">Entreprise</span>
+                    </a></li>
+                <li class="list-item" style="--color:#ffa117"><a href="projet.html">
+                        <span class="text">Réalisations Professionnelles</span>
+                    </a></li>
+                <li class="list-item" style="--color:#2196f3"><a href="veille_technologique.html">
+                        <span class="text">Veille Technologique</span>
+                    </a></li>
+                <li class="list-item" style="--color:#b145e9"><a href="contact.html">
+                        <span class="text">Contact</span>
+                    </a></li>
+            </ul>
+        </div>
+    </div>
+
     <div class="container">
         <h2>Contactez-nous</h2>
         <div class="contact-info">
@@ -36,11 +38,12 @@
             <p><strong>Email:</strong> claironanthony@gmail.com</p>
         </div>
         <form action="mailto:your_email@example.com" method="post" enctype="text/plain">
-            <input type="text" name="name" placeholder="Votre nom" required>
-            <input type="email" name="email" placeholder="Votre Email" required>
-            <textarea name="message" placeholder="Votre Message" required></textarea>
+            <input type="text" name="name" placeholder="Votre nom" required><br>
+            <input type="email" name="email" placeholder="Votre Email" required><br>
+            <textarea name="message" placeholder="Votre Message" required></textarea><br>
             <input type="submit" value="Envoyer le Message">
         </form>
     </div>
+    <script src="js/Header.js"></script>
 </body>
 </html>
