--- a/portfoliobtssio/contact.html
+++ b/portfoliobtssio/contact.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" type="text/css" href="/contact.css">
     <title>Portfolio de CLAIRON Anthony (BTS SIO 2025)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <title>Contact</title>
 </head>
 <body>
     <header>
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <button class="nav-link active" ><a href="portoflioCv.html#Presentation"> Présentation</button></a>
+                <button class="nav-link " ><a href="portoflioCv.html#Presentation"> Présentation</button></a>
             </li>
             <li class="nav-item">
                 <button class="nav-link "><a href="portoflioCv.html#ParcoursScolaire">Parcours Scolaire</button></a>
@@ -26,6 +25,9 @@
             </li>
             <li class="nav-item">
                 <button class="nav-link "><a href="portoflioCv.html#Competence">Contact</button></a>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link active" aria-current="page"  onclick="location.href='#Contact'">Contact</button>
             </li>
           </ul>
     </header>
