--- a/portfoliobtssio/index.html
+++ b/portfoliobtssio/index.html
@@ -6,7 +6,7 @@
     <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Portfolio de CLAIRON Anthony - BTS SIO SLAM">
     <meta name="author" content="CLAIRON Anthony">
-    <link rel="stylesheet" type="text/css" href="portfolio.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <title>Portfolio de CLAIRON Anthony (BTS SIO 2024)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
@@ -53,30 +53,10 @@
             <article>Le BTS SIO SISR (Solution d’Infrastructure Système et Réseau), est une option du BTS SIO qui a pour but de former des techniciens réseau polyvalents. Les lauréats de ce programme ont toutes les compétences nécessaires pour la gestion et la maintenance du réseau d’une entreprise. Ils peuvent également intervenir quant à l’achat du matériel réseau employé en négociant directement avec les fournisseurs</article>
         <h2>Qu'est-ce que l'Option SLAM</h2>    
             <article>Le BTS SIO SLAM (Solutions Logicielles et Application Métiers), est un parcours dédiés aux passionnés du développement logiciel. Durant leurs deux années d’études, les étudiants apprennent à rédiger un cahier des charges, développer des applications et assurer leur intégration dans les systèmes informatisés de la société.</article>
-            <h2 id="ParcoursScolaire">Parcours Scolaire</h2>
-            <ul>
-                <li>BAFA obtenu en 2022</li>
-                <img src="">
-                <li>BAC LLCER Anglais obtenu en 2023</li>
-                    <img src="">
-                <li>BTS SIO SLAM en cours d'obtention depuis 2023</li>
-                    <img src="">
-            </ul>
-        <h2 id="ParcoursProfessionnel">Parcours Professionnel</h2>
-            <ol>
-                <li>Professeur d'anglais pendant 5 ans particulier</li>
-                    <p>professeur d'anglais pour les jeunes entre 5 et 12 ans régulierement et plus rarement les plus agés même si cela est deja arriver mais de maniere plus spontané</p>
-                <li>Animateur en espace jeunes durée de 4 mois cumulé</li>
-                    <p>Animateur durant les vanaces au depart cumulant 1 mois eparpillé puis 3 mois a temps plein en tant qu'animateur dans le centre Louis Aragon de villier le bel </p>
-                <li>Etudiant en BTS SIO SLAM à l'IPSSI</li>    
-                    <p>Etudiant dans le campus Paris de l'IPSSI ayant permis l'apprentissage des bases du codes et de la gestion de base de donnée</p>
-                <li>Stage bts sio slam durée de 5 semaine </li>
-                    <p>stage formateur dans l'ensemble et utile a l'obtension de mon diplome permis d'avoir un avant gout du monde du travail en dev.</p>
-              </ol>
         <h2 id="Competence">Competence</h2>
             <ul>
                 <li>Curieux</li>
-                <li>Débrouillard</li>
+                <li>Pas effrayer de demander de l'aide</li>
                 <li>prompt à se tirer d'embarras</li>
                 <li>Un comportement adaptatif aux changements de l'environnement</li>
             </ul>
