--- a/portfoliobtssio/contact.html
+++ b/portfoliobtssio/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta https-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="trying.css">
-    <title>Portfolio de CLAIRON Anthony (BTS SIO 2025)</title>
+    <link rel="stylesheet" href="contact.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Contact</title>
 </head>
 <body>
