--- a/portfoliobtssio/projet.html
+++ b/portfoliobtssio/projet.html
@@ -42,8 +42,15 @@
     <p>Documentation Labtainer</p>
     <a class="button" href="LABTAINER - DOCUMENTATION - BTS SIO 25.1A (2).pdf"><span>TP Labtainer</span></a>
     <p>Modification de l'adressage réseau d'une machine utilisateur avec une machine hôte via un serveur DHCP/DNS</p>
-    <a class="button" href="TP-serveur-dhcp-dns-corr.pdf"><span>Documentation</span></a><br>
+    <a class="button" href="TP-serveur-dhcp-dns-corr.pdf"><span>TP Serveur-DHCP/DNS</span></a><br>
+    <p>Attribution et modification de l'adressage réseau d'une machine hôte et une machine cliente avec la mise en place d'un serveur DHCP et d'un DNS</p>
+
+    <a class="button" href="WIRESHARK-DOCUMENTATION - BTS SIO 25.1A"><span>TP Labtainer</span></a>
+    <p>Modification de l'adressage réseau d'une machine utilisateur avec une machine hôte via un serveur DHCP/DNS</p>
+    <a class="button" href="TP- GLPI"><span>TP Ticketing GLPI</span></a><br>
+
     <h2 id="Veille">Veille technologique</h2>
+    <p></p>
 </main>
 </body>
 </html>
