--- a/portfoliobtssio/projet.html
+++ b/portfoliobtssio/projet.html
@@ -1,56 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portfolio de CLAIRON Anthony - BTS SIO SLAM">
-    <meta name="author" content="CLAIRON Anthony">
-    <link rel="stylesheet" type="text/css" href="portfolio.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    
-     <title>Portfolio de CLAIRON Anthony (BTS SIO 2024)</title>
-</head>
-<body>
-    
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Portfolio de CLAIRON Anthony - BTS SIO SLAM"
+    />
+    <meta name="author" content="CLAIRON Anthony" />
+    <link rel="stylesheet" type="text/css" href="portfolio.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+
+    <title>Portfolio de CLAIRON Anthony (BTS SIO 2024)</title>
+  </head>
+  <body>
     <header>
-        <ul class="nav nav-tabs">
-            <li class="nav-item">
-                <a class="nav-link" aria-current="page"  href="portoflioCv.html">Présentation</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link " aria-current="page"  href="portoflioCv.html">Parcours Scolaire</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link " aria-current="page"  href="portoflioCv.html">Parcours Professionnel</a>
-            </li>
-            <li class="nav-item">
-                <button class="nav-link active" aria-current="page"  onclick="location.href='#Projet'">Projet</button>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link " aria-current="page"  onclick="location.href='Veille'">Veille Technologique </a>
-            </li>
-            <li class="nav-item">
-                <button class="nav-link " aria-current="page"  href="contact.html">Contact</button>
-            </li>
-          </ul>
-    </header> 
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="portoflioCv.html"
+            >Présentation</a
+>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="portoflioCv.html"
+            >Parcours Scolaire</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="portoflioCv.html"
+            >Parcours Professionnel</a
+          >
+        </li>
+        <li class="nav-item">
+          <button
+            class="nav-link active"
+            aria-current="page"
+            onclick="location.href='#Projet'"
+          >
+            Projet
+          </button>
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            aria-current="page"
+            onclick="location.href='Veille'"
+            >Veille Technologique
+          </a>
+        </li>
+        <li class="nav-item">
+          <button class="nav-link" aria-current="page" href="contact.html">
+            Contact
+          </button>
+        </li>
+      </ul>
+    </header>
     <main>
-    <h2 id="Projet">Projet Pédagogique </h2>
-    <h3>AP1</h3>
-    <p>Création d'une entreprise fictive</p>
-    <h3>Documentation et TD</h3><br>
-    <p>Documentation Labtainer</p>
-    <a class="button" href="LABTAINER - DOCUMENTATION - BTS SIO 25.1A (2).pdf"><span>TP Labtainer</span></a>
-    <p>Modification de l'adressage réseau d'une machine utilisateur avec une machine hôte via un serveur DHCP/DNS</p>
-    <a class="button" href="TP-serveur-dhcp-dns-corr.pdf"><span>TP Serveur-DHCP/DNS</span></a><br>
-    <p>Attribution et modification de l'adressage réseau d'une machine hôte et une machine cliente avec la mise en place d'un serveur DHCP et d'un DNS</p>
+      <h2 id="Projet">Projet Pédagogique</h2>
+      <h3>AP1</h3>
+      <p>Création d'une entreprise fictive</p>
+      <h3>Documentation et TD</h3>
+      <br />
+      <p>Documentation Labtainer</p>
+      <a class="button" href="LABTAINER - DOCUMENTATION - BTS SIO 25.1A (2).pdf"
+        ><span>TP Labtainer</span></a
+      >
+      <p>
+        Modification de l'adressage réseau d'une machine utilisateur avec une
+        machine hôte via un serveur DHCP/DNS
+      </p>
+      <a class="button" href="TP-serveur-dhcp-dns-corr.pdf"
+        ><span>TP Serveur-DHCP/DNS</span></a
+      ><br />
+      <p>
+        Attribution et modification de l'adressage réseau d'une machine hôte et
+        une machine cliente avec la mise en place d'un serveur DHCP et d'un DNS
+      </p>
 
-    <a class="button" href="WIRESHARK-DOCUMENTATION - BTS SIO 25.1A"><span>TP Labtainer</span></a>
-    <p>Modification de l'adressage réseau d'une machine utilisateur avec une machine hôte via un serveur DHCP/DNS</p>
-    <a class="button" href="TP- GLPI"><span>TP Ticketing GLPI</span></a><br>
-
-    <h2 id="Veille">Veille technologique</h2>
-    <p></p>
-</main>
-</body>
+      <a class="button" href="WIRESHARK-DOCUMENTATION - BTS SIO 25.1A"
+        ><span>TP Labtainer</span></a
+      >
+      <p>
+        Modification de l'adressage réseau d'une machine utilisateur avec une
+        machine hôte via un serveur DHCP/DNS
+      </p>
+      <a class="button" href="TP- GLPI"><span>TP Ticketing GLPI</span></a
+      ><br />
+    </main>
+    <footer>
+        <h2 id="Contact">Contact</h2>
+        <a href="contact.html" class="button"><span>Nous contacter</span></a>
+    </footer>
+  </body>
 </html>
