--- a/portfoliobtssio/html/index.html
+++ b/portfoliobtssio/html/index.html
@@ -31,11 +31,14 @@
                 <button class="nav-link " aria-current="page"  onclick="location.href='#Competence'">Competence</button>
             </li>
             <li class="nav-item">
-                <a class="nav-link " aria-current="page"  href="contact.html">Contact</a>
+                <a class="nav-link " aria-current="page"  href="/html/contact.html">Contact</a>
             </li>
           </ul>
     </header> 
     <main>
+    <div class="slider">
+        <img src="img/slider.png">
+    </div>    
     <div class="container">
         <h1>PORTFOLIO DE ANTHONY CLAIRON BTS SIO SISR</h1>
         <h2 id="Presentation">Présentation</h2>
