--- a/portfoliobtssio/html/index.html
+++ b/portfoliobtssio/html/index.html
@@ -16,24 +16,25 @@
     <header>
         <ul class="nav nav-tabs">
             <li class="nav-item">
-                <button class="nav-link active" aria-current="page"  onclick="location.href='#Presentation'">Présentation</button>
+                <a class="nav-link active" aria-current="page" href="index.html">Présentation</a>
             </li>
             <li class="nav-item">
-                <button class="nav-link " aria-current="page"  onclick="location.href='#ParcoursScolaire'">Parcours Scolaire</button>
+                <a class="nav-link" aria-current="page" href="parcours.html">Parcours Scolaire et Professionnel</a>
             </li>
             <li class="nav-item">
-                <button class="nav-link " aria-current="page"  onclick="location.href='#ParcoursProfessionnel'">Parcours Professionnel</button>
+                <button class="nav-link" aria-current="page" onclick="location.href='#Projet'">
+                    Projet
+                </button>
             </li>
             <li class="nav-item">
-                <a class="nav-link " aria-current="page"  href="projet.html">Projet et Veille Technologique</a>
+                <a class="nav-link " aria-current="page" onclick="location.href='Veille'">Veille Technologique</a>
             </li>
             <li class="nav-item">
-                <button class="nav-link " aria-current="page"  onclick="location.href='#Competence'">Competence</button>
+                <button class="nav-link" aria-current="page" href="contact.html">
+                    Contact
+                </button>
             </li>
-            <li class="nav-item">
-                <a class="nav-link " aria-current="page"  href="/html/contact.html">Contact</a>
-            </li>
-          </ul>
+        </ul>
     </header> 
     <main>
     <div class="slider">
