--- a/portfoliobtssio/html/parcours.html
+++ b/portfoliobtssio/html/parcours.html
@@ -14,6 +14,29 @@
     <title>Parcour Professionnel et Parcour Scolaire</title>
 </head>
 <body>
+    <header>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html">Présentation</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="parcours.html">Parcours Scolaire et Professionnel</a>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link" aria-current="page" onclick="location.href='#Projet'">
+                    Projet
+                </button>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " aria-current="page" onclick="location.href='Veille'">Veille Technologique</a>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link" aria-current="page" href="contact.html">
+                    Contact
+                </button>
+            </li>
+        </ul>
+    </header>
     <h2 id="ParcoursScolaire">Parcours Scolaire</h2>
     <ul>
         <li>BAFA obtenu en 2022</li>
