--- a/portfoliobtssio/html/contact.html
+++ b/portfoliobtssio/html/contact.html
@@ -10,27 +10,29 @@
     <title>Contact</title>
 </head>
 <body>
-        <div class="navigation">
-            <div class="menu-toggle"></div>
-            <ul class="list">
-                <li class="list-item"><a href="index.html">
-                        <span class="text">Home</span>
-                    </a></li>
-                <li class="list-item"><a href="parcours.html">
-                        <span class="text">Entreprise</span>
-                    </a></li>
-                <li class="list-item" style="--color:#ffa117"><a href="projet.html">
-                        <span class="text">Réalisations Professionnelles</span>
-                    </a></li>
-                <li class="list-item" style="--color:#2196f3"><a href="veille_technologique.html">
-                        <span class="text">Veille Technologique</span>
-                    </a></li>
-                <li class="list-item" style="--color:#b145e9"><a href="contact.html">
-                        <span class="text">Contact</span>
-                    </a></li>
-            </ul>
-        </div>
-    </div>
+    <header>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="index.html">Présentation</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="parcours.html">Parcours Scolaire et Professionnel</a>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link" aria-current="page" onclick="location.href='#Projet'">
+                    Projet
+                </button>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " aria-current="page" onclick="location.href='Veille'">Veille Technologique</a>
+            </li>
+            <li class="nav-item">
+                <button class="nav-link active" aria-current="page" href="contact.html">
+                    Contact
+                </button>
+            </li>
+        </ul>
+    </header>
 
     <div class="container">
         <h2>Contactez-nous</h2>
