--- a/portfoliobtssio/html/projet.html
+++ b/portfoliobtssio/html/projet.html
@@ -17,31 +17,27 @@
 <body>
   <header>
     <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="portoflioCv.html">Présentation</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="portoflioCv.html">Parcours Scolaire</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" href="portoflioCv.html">Parcours Professionnel</a>
-      </li>
-      <li class="nav-item">
-        <button class="nav-link active" aria-current="page" onclick="location.href='#Projet'">
-          Projet
-        </button>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" aria-current="page" onclick="location.href='Veille'">Veille Technologique
-        </a>
-      </li>
-      <li class="nav-item">
-        <button class="nav-link" aria-current="page" href="contact.html">
-          Contact
-        </button>
-      </li>
+        <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="index.html">Présentation</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="parcours.html">Parcours Scolaire et Professionnel</a>
+        </li>
+        <li class="nav-item">
+            <button class="nav-link" aria-current="page" onclick="location.href='#Projet'">
+                Projet
+            </button>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" onclick="location.href='Veille'">Veille Technologique</a>
+        </li>
+        <li class="nav-item">
+            <button class="nav-link" aria-current="page" href="contact.html">
+                Contact
+            </button>
+        </li>
     </ul>
-  </header>
+</header>
   <main>
     <h2 id="Projet">Projet Pédagogique</h2>
     <h3>AP1</h3>
