--- a/portfoliobtssio/html/veille_technologique.html
+++ b/portfoliobtssio/html/veille_technologique.html
@@ -41,10 +41,55 @@
             </li>
         </ul>
     </header>
-    <footer>
-        <h2 id="Contact">Contact</h2>
-        <a href="contact.html" class="button"><span>Nous contacter</span></a>
-    </footer>
+    <h1>Les renseignement utilisé sont extrait et obtenu grace a google alerte et un flux RSS Feedly</h1>
+    <section h1 title="Veilles technologiques">
+        <section h2>
+            <article>
+                <h2>l'utilisation de la technologie de la blockchaine</h2><br>
+                <h3>La blockchain ,c'est quoi ?</h3>
+                <p>Développée à partir de 2008, la blockchain est, en premier lieu, une technologie de stockage et de
+                    transmission d’informations.
+                    Cette technologie offre de hauts standards de transparence et de sécurité car elle fonctionne sans
+                    organe central de contrôle.
+                    Plus concrètement, la blockchain permet à ses utilisateurs connectés en réseau de partager des
+                    données sans intermédiaire.</p>
+            </article>
+        </section>
+        <section h2>
+            <article>
+                <h2>L'arriver et l'utilisation du WIFI 7</h2>
+                <h3>Le WIFI 7 ,c'est quoi?</h3>
+                <p>Le WiFi 7 est la prochaine norme WiFi, également connue sous le nom d'IEEE 802.11be Extremely High
+                    Throughput (EHT). Il fonctionne sur les trois bandes (2,4 GHz, 5 GHz et 6 GHz) pour utiliser
+                    pleinement les ressources spectrales. Alors que le WiFi 6 a été conçu en réponse au nombre croissant
+                    d'appareils dans le monde, l'objectif du WiFi 7 est d'offrir des vitesses étonnantes pour chaque
+                    appareil avec une plus grande efficacité</p>
+                <p>Le WiFi 7 introduit une bande passante ultra-large de 320 MHz, un fonctionnement 4096-QAM, Multi-RU
+                    et Multi-Link pour offrir des vitesses 4,8 fois plus rapides que le WiFi 6 et 13 fois plus rapides
+                    que le WiFi 5. Débloquez plus de scénarios que jamais.</p>
+            </article>
+        </section>
+    </section>
+    <section h1 title="Veille juridique">
+        <section h2>
+            <h2>Microsoft obtient le droit de stocker les donner de santer francaise</h2>
+            <h3>Autorisé?</h3>
+            <p>JLa CNIL n'avait jamais autoriser des entrepôts alimentés par des données du
+                Système national des données de santé (SNDS, géré par l'Assurance maladie), si ceux-ci devaient être
+                hébergés sur une plateforme de cloud non européenne. Mais finalement dans une décision en date du 21 décembre, publiée cette semaine sur Légifrance, la CNIL a accepté
+                de valider pour trois ans la constitution d'un tel entrepôt, pour le compte de l'Agence européenne du
+                médicament.</p>
+            <h3>Risque</h3>
+            <p>La sécurité de tel information ainsi que la confidentialité de ces données sont importantes . La peur des consequence des pertes de ces données sont grandes
+                cependant le projet étant déjà prévue depuis 2019 semble être suffisament préparé</p>
+            <h3>Solution</h3>
+            <p>Pour pouvoir palier a ces problèmes la CNIL a accepté de stocket les donner juste 3 ans dans l'espoir d'avoir un préstataire d'ici là</p>
+        </section>
+
+        <footer>
+            <h2 id="Contact">Contact</h2>
+            <a href="contact.html" class="button"><span>Nous contacter</span></a>
+        </footer>
 </body>
 
 </html>
