--- a/portfoliobtssio/html/projet.html
+++ b/portfoliobtssio/html/projet.html
@@ -24,12 +24,12 @@
             <a class="nav-link" aria-current="page" href="parcours.html">Parcours Scolaire et Professionnel</a>
         </li>
         <li class="nav-item">
-            <button class="nav-link" aria-current="page" onclick="location.href='#Projet'">
+            <button class="nav-link active" aria-current="page" onclick="location.href='#Projet'">
                 Projet
             </button>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" onclick="location.href='Veille'">Veille Technologique</a>
+            <a class="nav-link" aria-current="page" onclick="location.href='Veille'">Veille Technologique</a>
         </li>
         <li class="nav-item">
             <button class="nav-link" aria-current="page" href="contact.html">
