--- a/portfoliobtssio/html/veille_technologique.html
+++ b/portfoliobtssio/html/veille_technologique.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" aria-current="page" href="parcours.html">Parcours Scolaire et Professionnel</a>
             </li>
             <li class="nav-item">
-                <button class="nav-link" aria-current="page" onclick="location.href='#Projet'">
+                <button class="nav-link" aria-current="page" href="projet.html">
                     Projet
                 </button>
             </li>
@@ -42,7 +42,7 @@
         </ul>
     </header>
     <h1>Les renseignement utilisé sont extrait et obtenu grace a google alerte et un flux RSS Feedly</h1>
-    <section h1 title="Veilles technologiques">
+    <section  class="Veille" h1 title="Veilles technologiques">
         <section h2>
             <article>
                 <h2>l'utilisation de la technologie de la blockchaine</h2><br>
